# EpiLAMA

./: README.md
EpiLAMA-IL/: README.md  config.ini  env_ankh.yml  environment.yml  pyproject.toml
EpiLAMA-IL/scripts/: utils.py
EpiLAMA-IL/scripts/data/: blastp.py  extract_ankh_embeddings.py  index_epitopes.py  launch_ankh.sh  process_epitopes.py  utils.py  wget_sequence.py
EpiLAMA-IL/scripts/inference/: README.md  config.yml  embedder.sh  proteins.csv  requirements.txt
EpiLAMA-IL/scripts/inference/SWAT/scripts/: extract_ESMC.py  predict.py
EpiLAMA-IL/scripts/inference/SWAT/src/models/: esmc.py
EpiLAMA-IL/scripts/modeling/: config.yaml  train_lama_hierarchical_embeds.py  utils.py
EpiLAMA-IM/: README.md  calculate_scores.py  create_environment.sh  environment.yml  epilama_im_inference.py  epilama_im_train.py  train_ap_combinations.sh
EpiLAMA-IM/custom_data/: utils.py
EpiLAMA-IM/src/: chem.py  deeppeptide_module.py  descriptors.py  mhcnuggets_module.py  utils.py
EpiLAMA-IM/train_data/scores_files/: scores_allele_chem.txt  scores_allele_chem_desc.txt  scores_allele_chem_desc_dp.txt  scores_allele_chem_desc_dp_il.txt  scores_allele_chem_desc_il.txt  scores_allele_chem_dp.txt  scores_allele_chem_dp_il.txt  scores_allele_chem_il.txt  scores_allele_desc.txt  scores_allele_desc_dp.txt  scores_allele_desc_dp_il.txt  scores_allele_desc_il.txt  scores_allele_dp.txt  scores_allele_dp_il.txt  scores_allele_il.txt  scores_chem.txt  scores_chem_desc.txt  scores_chem_desc_dp.txt  scores_chem_desc_dp_il.txt  scores_chem_desc_il.txt  scores_chem_dp.txt  scores_desc.txt  (+8 more)
